Update createTime column in MsgModel.go and MsgDao.go*** ***Add GetMsgHistory and GetMsgList functions in MsgController.go*** ***Update swagger.yaml with new API endpoints
